# ctube

./: .gitignore  LICENSE  README.md  pyproject.toml
ctube/: app.py  callbacks.py  cli.py  cmds.py  colors.py  containers.py  decorators.py  download.py  errors.py  extractors.py  helpers.py  parser.py  paths.py  printers.py  terminal.py  update.py
tests/: test.py  test_app.py
