[tool.poetry]
name = "ctube"
version = "0.1.6"
description = ""
authors = ["Simone Gentili <gensydev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/ctube/"
repository = "https://github.com/g3nsy/ctube"
keywords = ["innertube", "youtube", "youtube-music", "python", "download", "music", "client"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.25.1"
eyed3 = "^0.9.7"
innertube = "^2.1.16"
pytubefix = "^5.4.2"
pathvalidate = "^3.2.0"
requests="^2.32.2"

[tool.poetry.scripts]
ctube = "ctube.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
